[gd_scene load_steps=7 format=2]

[ext_resource path="res://test/Test.gd" type="Script" id=1]
[ext_resource path="res://scenes/characters/Human.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/characters/Orc.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/stages/Forest.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/characters/HumanArcher.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/BattleGUI.tscn" type="PackedScene" id=6]

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="Stage" parent="." instance=ExtResource( 4 )]

[node name="YSort" type="YSort" parent="."]

[node name="Human" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 64, 264 )
max_health = 10

[node name="Human2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 136, 272 )
max_health = 10

[node name="HumanArcher" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 104, 248 )

[node name="Orc" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 112, 72 )
team = 1

[node name="BattleGUI" parent="." instance=ExtResource( 6 )]
